--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
         "coinmarketcap-cli-api": ">=1.0.0",
         "cryptocurrencies": "^1.1.0",
         "discord.js": "^11.2.1",
+        "imgur": "^0.2.1",
         "lodash": "^4.17.4",
         "markdown-table": "^1.1.1",
         "regexp-quote": "0.0.0",
-        "strip-ansi": "^4.0.0"
+        "strip-ansi": "^4.0.0",
+        "webshot": "^0.18.0"
     },
     "repository": {
         "type": "git",
